--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,12 @@ name: Build CI release
 on:
   push:
     branches:
-      - 'master'
+      - master
     # paths:
     #   - 'Quelea/**'
+
+    pull_request:
+      - master
 
 jobs:
   release:
@@ -54,6 +57,7 @@ jobs:
           gradle -Dnightly=true -Dversionsuffix=CI-UNSTABLE clean dist
 
       - name: Upload binaries to release
+        if: ${{ github.event_name == 'push' }}
         uses: softprops/action-gh-release@v2
         with:
           files: Quelea/dist/standalone/*
@@ -65,3 +69,9 @@ jobs:
                 Quelea is also distributed as a Linux snap package. To install it, make 
                 sure snap is installed then run:
                 <pre>sudo snap install --edge quelea</pre>"
+
+      - name: Upload standalones as artifact of PR
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: actions/upload-artifact@v4
+        with:
+          path: Quelea/dist/standalone/
